--- a/client/src/Components/WarehouseDetails.scss
+++ b/client/src/Components/WarehouseDetails.scss
@@ -5,6 +5,8 @@
 body {
     box-sizing: border-box;
     font-size: 0.813rem;
+    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+    border-radius: 3px;
 }
 
 h4 {
@@ -30,15 +32,22 @@ p {
     }
 
     &__header-wrap {
-        @include mobile-margin;
         width: 100%;
         display: flex;
         justify-content: space-between;
+        margin: 1.5rem 1rem;
     }
 
     &__header-title{
         font-size: 1.75rem;
-        margin: 0 5rem 0 1rem;
+        margin: 0 7rem 0 1rem;
+    }
+
+    &__edit-container {
+        background-color: $indigo;
+        width: 36px;
+        height: 36px;
+        border-radius: 20px;
     }
 
     &__info {
@@ -53,18 +62,19 @@ p {
 
     &__contact {
         display: flex;
+        justify-content: space-between;
         @include mobile-margin;
         margin-top: 0;
     }
 
     &__contact-name {
         text-align: left;
-        margin-right: 1rem;
     }
 
     &__contact-info {
         text-align: left;
         margin-left: 1rem;
+        margin-right: 2rem;
     }
 
     &__inventory-container {
@@ -84,21 +94,66 @@ p {
 
     &__item-container {
         display: flex;
+        justify-content: space-between;
         @include mobile-margin;
+        margin-bottom: 0;
     }
 
     &__item-wrap {
         display: flex;
     }
 
+    &__description {
+        margin-top: 0;
+        color: $indigo;
+    }
+
+    &__chevron {
+        position: relative;
+        bottom: .5rem;
+    }
+
+    &__status-container {
+        width: 8rem;
+        text-align: left;
+        margin-left: 1rem;
+        margin-right: 2.8rem;
+    }
+
+    &__in-stock {
+        background-color: $grey;
+        border-radius: 20px;
+        padding: .25rem .5rem;
+        color: $green;
+        font-weight: 600;
+    }
+    
+    &__out-stock {
+        background-color: $grey;
+        border-radius: 20px;
+        padding: .25rem .5rem;
+        color: $red;
+        font-weight: 600;
+        margin-right: 2rem;
+    }
+
     &__category-container {
         @include mobile-margin;
         display: flex;
+        justify-content: space-between;
+    }
+
+    &__quantity-container {
+        text-align: left;
+        margin-right: 5.7rem;
+        width: 5rem;
     }
 
     &__icon-container {
         @include mobile-margin;
         display: flex;
         justify-content: space-between;
+        margin-top: 0;
+        margin-bottom: 1.5rem;
     }
 }
