--- a/client/src/Components/WarehouseDetails.scss
+++ b/client/src/Components/WarehouseDetails.scss
@@ -23,6 +23,8 @@ p {
 
     &__address {
         @include mobile-margin;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
     }
 
     &__header-container {
@@ -38,16 +40,17 @@ p {
         margin: 1.5rem 1rem;
     }
 
-    &__header-title{
+    &__header-title {
         font-size: 1.75rem;
-        margin: 0 7rem 0 1rem;
+        margin: 0 7.5rem 0 1rem;
     }
 
-    &__edit-container {
+    &__edit-icon {
         background-color: $indigo;
         width: 36px;
         height: 36px;
         border-radius: 20px;
+        object-fit: scale-down;
     }
 
     &__info {
@@ -63,8 +66,8 @@ p {
     &__contact {
         display: flex;
         justify-content: space-between;
-        @include mobile-margin;
         margin-top: 0;
+        margin: 0 1.5rem 1rem 1.5rem;
     }
 
     &__contact-name {
@@ -74,7 +77,7 @@ p {
     &__contact-info {
         text-align: left;
         margin-left: 1rem;
-        margin-right: 2rem;
+        margin-right: 1.5rem;
     }
 
     &__inventory-container {
@@ -95,7 +98,7 @@ p {
     &__item-container {
         display: flex;
         justify-content: space-between;
-        @include mobile-margin;
+        margin: 1rem 1.5rem 0 1.5rem;
         margin-bottom: 0;
     }
 
@@ -117,7 +120,7 @@ p {
         width: 8rem;
         text-align: left;
         margin-left: 1rem;
-        margin-right: 2.8rem;
+        margin-right: 2.3rem;
     }
 
     &__in-stock {
@@ -139,21 +142,21 @@ p {
 
     &__category-container {
         @include mobile-margin;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
         display: flex;
         justify-content: space-between;
     }
 
     &__quantity-container {
         text-align: left;
-        margin-right: 5.7rem;
+        margin-right: 5.2rem;
         width: 5rem;
     }
 
     &__icon-container {
-        @include mobile-margin;
         display: flex;
         justify-content: space-between;
-        margin-top: 0;
-        margin-bottom: 1.5rem;
+        margin: 0 1.5rem 1.5rem 1.5rem;
     }
 }
