--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -73,10 +73,16 @@
 			text-align: center;
 		}
 
-		&.active {
-			background-color: $black;
-			border-radius: 20px;
-			color: $white;
-		}
+		// &.active {
+		// 	background-color: $black;
+		// 	border-radius: 20px;
+		// 	color: $white;
+		// }
 	}
+}
+
+.selected {
+	background-color: $black;
+	border-radius: 20px;
+	color: $white;
 }
