header fixed and ready to go~ pushing from modal branch

--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -12,35 +12,35 @@
 	color: $white;
 	text-align: center;
 	font-family: Titillium;
-	padding-top: 40px;
-	height: 136px;
+	padding-top: 2.5rem;
+	height: 8.5rem;
 	margin: 0;
 
 	@include tablet {
 		display: flex;
 		justify-content: space-between;
-		height: 186px;
-		padding-top: 35px;
+		height: 11.625rem;
+		padding-top: 2.188rem;
 	}
 
 	&__logo {
 		@include tablet {
-			padding-left: 32px;
-			padding-top: 8px;
+			padding-left: 2rem;
+			padding-top: 0.5rem;
 		}
 
 		@include desktop {
-			padding-left: 130px;
+			padding-left: 8.125rem;
 		}
 	}
 
 	&__links {
 		display: flex;
 		justify-content: space-around;
-		font-size: 13px;
+		font-size: 0.813rem;
 		color: $cloud;
-		margin-top: 10px;
-		padding-bottom: 10px;
+		margin-top: 0.625rem;
+		padding-bottom: 0.625rem;
 
 		:hover {
 			text-decoration: underline;
@@ -48,41 +48,44 @@
 		}
 
 		@include tablet {
-			padding-right: 32px;
+			padding-right: 2rem;
 		}
 
 		@include desktop {
-			padding-right: 146px;
+			padding-right: 9.125rem;
 		}
 	}
 
 	&__link {
-		width: 164px;
+		width: 9rem;
 		text-decoration: none;
 		color: $cloud;
-		line-height: 20px;
-		padding-top: 8px;
-		padding-bottom: 8px;
+		line-height: 1.25rem;
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
 		font-weight: 600;
 
 		@include tablet {
-			height: 38px;
-			line-height: 34px;
-			width: 107px;
+			height: 2.375rem;
+			line-height: 2.125rem;
+			width: 6.688rem;
 			padding: 0;
 			text-align: center;
 		}
 
-		// &.active {
-		// 	background-color: $black;
-		// 	border-radius: 20px;
-		// 	color: $white;
-		// }
-	}
-}
+		@include tablet {
+			height: 2.375rem;
+			line-height: 2.125rem;
+			width: 6.688rem;
+			padding: 0;
+			text-align: center;
+		}
 
-.selected {
-	background-color: $black;
-	border-radius: 20px;
-	color: $white;
+		&--active {
+			color: $white;
+			background: $black;
+			border-radius: 1.25rem;
+			text-decoration: none;
+		}
+	}
 }
