--- a/client/src/Components/InventoryEdit/InventoryEdit.scss
+++ b/client/src/Components/InventoryEdit/InventoryEdit.scss
@@ -21,4 +21,62 @@
     @include desktop {
         margin: 0 130px;
     }
+
+    &__heading {
+        display: flex;
+        padding: 32px 1.5rem 16px 1.5rem;
+        border-bottom: 1px solid $cloud;
+    }
+
+    &__details {
+        padding: 1rem 1.5rem;
+    }
+
+    &__form-label {
+        display: flex;
+        flex-direction: column;
+        font-size: 13px;
+        line-height: 20px;
+        font-weight: 600;
+    }
+
+    &__availability {
+        padding: 1rem 1.5rem;
+    }
+
+    &__description {
+        resize: none;
+    }
+
+    &__radio-buttons {
+        display: flex;
+    }
+
+    &__radio-button {
+        width: 50%;
+    }
+
+    &__text-input {
+        font-family: $titillium;
+        font-size: 13px;
+        line-height: 20px;
+    }
+
+    &__select-input {
+        font-family: $titillium;
+        font-size: 13px;
+        line-height: 20px;
+        appearance: none;
+        background-image: url(../../Assets/Icons/arrow_drop_down-24px.svg);
+        background-repeat: no-repeat;
+        background-position-x: 100%;
+        background-position-y: -2px;
+    }
+
+    &__actions {
+        background-color: rgba(247, 248, 249, 0.7);
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem 1.5rem;
+    }
 }
