update backend for PUT request inventory - fixed bugs

--- a/client/src/Components/InventoryList/InventoryList.scss
+++ b/client/src/Components/InventoryList/InventoryList.scss
@@ -299,7 +299,7 @@
     &__edit {
 
         @include tablet {
-            padding-left: 20px;
+            margin-left: 20px;
         }
     }
 }
