--- a/client/src/Components/WarehouseCard/WarehouseCard.scss
+++ b/client/src/Components/WarehouseCard/WarehouseCard.scss
@@ -52,7 +52,12 @@
     &-link {
         display: flex;
         align-items: center;
-        // width: 100px;
+        width: 100px;
+        text-decoration: none;
+    }
+
+    Link {
+        text-decoration: none;
     }
 
     &-location {
@@ -74,6 +79,10 @@
 
     &-content {
         font-family: $titillium;
+
+        @include tablet {
+            width: 100px;
+        }
     }
 
     &-content-mobile {
@@ -86,13 +95,11 @@
         display: none;
 
         @include tablet {
-            display: flex;
-            width: 88px;    
+            display: flex; 
         }
 
         @include desktop {
-            display: flex;
-            width: auto;    
+            display: flex;  
         }
     }
 
