--- a/client/src/Components/Modals/Modal.scss
+++ b/client/src/Components/Modals/Modal.scss
@@ -30,8 +30,8 @@
 }
 
 .delete__button {
-	height: 3.125rem;
-	width: 3.125rem;
+	height: 24px;
+	width: 24px;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: $white;
