Accidentally worked on both ticket items at once so combined. Completed all form functionality including front end validation and radio button toggling. QA'd and verified POST functionality from form

--- a/client/src/Components/InventoryAdd/InventoryAdd.scss
+++ b/client/src/Components/InventoryAdd/InventoryAdd.scss
@@ -111,7 +111,7 @@
         border-radius: 20px;
         height: 36px;
         width: 95%;
-        margin: 0% 0% 5%;
+        margin: 0% 0% 1%;
         text-indent: 20px;
 
         @include desktop {
@@ -125,7 +125,7 @@
         border-radius: 20px;
         height: 36px;
         width: 95%;
-        margin: 0% 0% 5%;
+        margin: 0% 0% 1%;
         text-indent: 20px;
 
         @include desktop {
@@ -139,7 +139,7 @@
         border-radius: 20px;
         height: 120px;
         width: 95%;
-        margin: 0% 0% 5%;
+        margin: 0% 0% 1%;
         text-indent: 20px;
         padding: 0.5rem 0rem 0rem;
         resize: none;
@@ -155,7 +155,7 @@
         border-radius: 20px;
         height: 36px;
         width: 95%;
-        margin: 0% 0% 5%;
+        margin: 0% 0% 1%;
         text-indent: 20px;
         appearance: none;
         background-color: $white;
@@ -212,6 +212,12 @@
         }
     }
 
+    &__details-radio {
+        border: 0px;
+        width: 20%;
+        height: 1rem;
+    }
+
     &__details-subContainer-radioInp {
         margin: 3% 5% 0% 0%;
         width: 50%;
@@ -229,11 +235,8 @@
         margin: 0% 0% 0%;
         height: 75px;
         background-color: $grey;
-    }
-
-    &__buttons {
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
 
         @include tablet {
             display: flex;
@@ -245,31 +248,32 @@
         display: flex;
         padding: 1rem 1.25rem 0rem;
         justify-content: space-between;
-        width: 65%;
+        width: 80%;
+        margin: 2% 0% 0% 0%;
 
         @include tablet {
-            width: 23%;
+            width: 30%;
             padding: 1rem 1rem 0rem;
             margin: 0% 3% 0% 0%;
         }
 
         @include desktop {
-            width: 18%;
-            padding: 1rem 1.25rem 0rem;
+            width: 22%;
+            padding: 1rem 2rem 0rem;
         }
     }
 
     &__cancel-button {
         border: 1px solid $cloud;
         background-color: $white;
-        width: 250%;
+        width: 300%;
         height: 35px;
         border-radius: 20px;
         font-family: $titillium;
         font-weight: 600;
 
         @include tablet {
-            width: 150%;
+            width: 200%;
             height: 40px;
         }
     }
@@ -282,26 +286,32 @@
         font-family: $titillium;
         font-weight: 600;
         color: $white;
-        width: 190%;
+        width: 50%;
 
         @include tablet {
-            width: 110%;
+            width: 55%;
             height: 40px;
         }
 
-        @include tablet {
-            width: 120%;
+        @include desktop {
+            width: 55%
         }
     }
 
-    Link {
-        width: 40%;
+    &__warning {
+        display: flex;
+        align-items: center;
+        height: 20px;
+        margin: 0% 0% 1%;
     }
 
-}
+    &__error-icon {
+        width: 13px;
+        height: 13px;
+        margin: 0% 1.5% 0% 0%;
+    }
 
-input[type=radio] {
-    border: 0px;
-    width: 20%;
-    height: 1rem;
+    &__warning-text {
+        color: $red;
+    }
 }
