--- a/client/src/Components/InventoryList/InventoryList.scss
+++ b/client/src/Components/InventoryList/InventoryList.scss
@@ -98,6 +98,7 @@
 
     &__add-button {
         color: $white;
+        cursor: pointer;
         background-color: $indigo;
         width: 100%;
         border: none;
